# dotfiles

./: README.md  README_TIPS_AND_TRICKS.md  extra-tools.txt  import  import-changes  install  pyproject.toml  update  upgrade
cursor/: README.md
fd/: install
git/: gitignore_global  import  import-changes  install  install-extra  install-gitignore  install-lazygit
git/lazygit/: config.yml  shell.sh
htop/: import  import-changes  install
kitty/: import  import-changes  install  kitty.conf
pyright/: pyrightconfig.json
ranger/: import  import-changes  install  rc.conf
rg/: import  import-changes  install  rgignore  rgignore.j2  ripgreprc  ripgreprc.j2
sublime/: README.md  readme.md
tmux/: import  import-changes  install  tmux.conf
tools/: install-local-golang  install-local-nodejs  install-local-python  install-local-rust
vim/: .gitignore  .vimrc  ideavimrc  import  import-changes  install  minuet_config.lua  my.vimrc  neovintageousrc  upgrade  upgrade-lsp  upgrade-plugins  vimrc  vimrc.example  vscodevimrc
vim/after/ftplugin/: jinja.vim
vim/lua/: async.lua
vim/nvim/: init.lua  lazy-lock.json
vim/nvim/after/ftplugin/: jinja.vim
vim/nvim/lua/: commands.lua  llm_corp_config.lua  plugins.lua  settings.lua
vim/nvim/lua/configs/: custom_minuet_llm.lua
vim/nvim/lua/fixes/: async.lua
vim/nvim/lua/plugins/: appearance.lua  commands.lua  editor.lua  file_management.lua  general.lua  (+2 more)
zsh/: .zshrc  direnv.toml  direnvrc  import  import-changes  install  install-antibody  my.zsh  my.zshrc  overlay.ini  p10k.zsh  upgrade  zsh_plugins.txt  zshrc
