[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles helpers"
authors = ["Oleg Morozenkov"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
jinja2 = "^3.1.6"
jinja2-cli = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
